--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "auto-footprint",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,8 +19,12 @@
   "dependencies": {
     "@ai-sdk/openai": "^0.0.17",
     "@tscircuit/builder": "^1.5.108",
+    "@tscircuit/footprinter": "^0.0.4",
     "@tscircuit/pcb-viewer": "^1.3.10",
     "ai": "^3.1.16",
+    "openai": "^4.47.2",
+    "react-query": "^3.39.3",
+    "use-debounce": "^10.0.1",
     "zod": "^3.23.8"
   }
 }
