--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
-    "start": "next dev"
+    "start": "next dev",
+    "build": "next build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@next/bundle-analyzer": "^14.2.3",
     "@types/node": "20.12.12",
     "@types/react": "18.3.3",
     "next": "^14.2.3"
@@ -19,7 +21,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^0.0.17",
     "@tscircuit/builder": "^1.5.108",
-    "@tscircuit/footprinter": "^0.0.25",
+    "@tscircuit/footprinter": "^0.0.26",
     "@tscircuit/pcb-viewer": "^1.3.10",
     "ai": "^3.1.16",
     "openai": "^4.47.2",
