--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@biomejs/biome": "^1.7.3",
     "@next/bundle-analyzer": "^14.2.3",
     "@types/node": "20.12.12",
     "@types/react": "18.3.3",
