--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@next/bundle-analyzer": "^14.2.3",
     "@types/node": "20.12.12",
     "@types/react": "18.3.3",
-    "next": "^14.2.3"
+    "next": "^14.2.3",
+    "seam-pgm": "^1.3.2"
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.17",
@@ -26,6 +27,7 @@
     "@tscircuit/pcb-viewer": "^1.3.10",
     "ai": "^3.1.16",
     "openai": "^4.47.2",
+    "pg": "^8.11.5",
     "react-query": "^3.39.3",
     "use-debounce": "^10.0.1",
     "zod": "^3.23.8"
